# SoftDesk_Django_API

./: .coveragerc  .env.local  .gitignore  README.md  coverage.xml  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: epic.yml  technical_task.yml  user_story.yml
.github/workflows/: ci.yml
api/v1/: urls.py
apps/auth/: serializers.py  tests.py  urls.py  views.py
apps/comments/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_initial.py
apps/issues/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/issues/migrations/: 0001_initial.py  0002_issueassignee_alter_issue_assignees_and_more.py
apps/projects/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
apps/users/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  urls_auth.py  urls_public.py  urls_users.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_email.py
apps/users/tests/: test_auth.py
common/: __init__.py  paginator.py  permissions.py  validators.py
config/: settings.py  urls.py
config/api/v1/: urls.py
postman/: openapi.yaml
